--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
-/* Basic Style */
-body {
+.body {
   background-color: #f8f8f8;
   color: #333;
   font-family: Lato, sans-serif;
@@ -9,7 +8,7 @@ body {
   text-align: right;
 }
 
-.header img {
+.header__image {
   width: 100%;
 }
 
@@ -40,17 +39,12 @@ body {
   padding: 0px;
 }
 
-li,
-h3 {
-  list-style: none;
-}
-
-input,
-button {
+.task__text,
+.task__button {
   outline: none;
 }
 
-button {
+.task__button {
   background: none;
   border: 0px;
   color: #888;
@@ -60,13 +54,11 @@ button {
   cursor: pointer;
 }
 
-button:hover {
+.task__button:hover {
   color: #3a3a3a;
 }
 
-/* Heading */
-h3,
-label[for="new-task"] {
+.todo__caption {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -76,7 +68,9 @@ label[for="new-task"] {
   text-transform: uppercase;
 }
 
-input[type="text"] {
+.task__text {
+  display: none;
+  width: 226px;
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -89,76 +83,47 @@ input[type="text"] {
   color: #888;
 }
 
-input[type="text"]:focus {
+.task__text:focus {
   color: #333;
 }
 
-/* New Task */
-label[for="new-task"] {
-  display: block;
-  margin: 0 0 20px;
-}
-
-input#new-task {
+.todo-add .task__text {
+  display: inline-block;
   width: 318px;
 }
 
-/* Task list */
-li {
-  overflow: hidden;
-  padding: 20px 0;
-  border-bottom: 1px solid #eee;
-
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-li>* {
-  vertical-align: middle;
-}
-
-li>input[type="checkbox"] {
+.task__checkbox {
   margin: 0 10px;
 }
 
-li>label {
+.task__label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
 
-li>input[type="text"] {
-  width: 226px
-}
-
-button.delete img {
+.button__image_delete {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-button.delete img:hover {
+.button__image_delete:hover {
   transform: rotateZ(0);
 }
 
-/* Completed */
-ul#completed-tasks label {
-  text-decoration: line-through color: #888;
+.todo-completed .task__label {
+  text-decoration: line-through;
+  color: #888;
 }
 
-/* Edit Task */
-ul li input[type=text] {
-  display: none
-}
-
-ul li.editMode input[type=text] {
+.todo__task_edit .task__text {
   display: inline-block;
   width: 224px
 }
 
-ul li.editMode label {
+.todo__task_edit .task__label {
   display: none;
 }
 
